--- a/Vue/package.json
+++ b/Vue/package.json
@@ -17,6 +17,7 @@
     "core-js": "3.6.5",
     "flatpickr": "4.6.3",
     "nouislider": "14.6.0",
+    "querystring-es3": "^0.2.1",
     "register-service-worker": "1.7.1",
     "vue": "2.6.11",
     "vue-chartjs": "3.5.0",
@@ -28,15 +29,16 @@
     "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.4.6",
-    "@vue/cli-plugin-eslint": "^4.4.6",
-    "@vue/cli-plugin-pwa": "^4.4.6",
-    "@vue/cli-service": "^4.4.6",
+    "@vue/cli-plugin-babel": "5.0.0-rc.3",
+    "@vue/cli-plugin-eslint": "5.0.0-rc.3",
+    "@vue/cli-plugin-pwa": "5.0.0-rc.3",
+    "@vue/cli-service": "5.0.0-rc.3",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.3.1",
-    "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^8.0.2",
+    "check-package-dependencies": "^3.2.0",
+    "eslint": "^7.5.0",
+    "eslint-plugin-vue": "^8.0.0",
+    "node-sass": "^6.0.0",
+    "sass-loader": "^12.1.0",
     "vue-template-compiler": "2.6.11"
   },
   "eslintConfig": {
